# miniature-memory

./: Cargo.toml
.github/workflows/: rust.yml
client/: .gitignore  Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  net.rs  update.rs
common/src/net/: errors.rs  mod.rs
server/: Cargo.toml
server/src/: database.rs  main.rs  update_response.rs
