[package]
name = "client"
version = "0.1.0"
authors = ["Caleb Xavier Berger <caleb.x.berger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../common" }
rand = "0.7"
structopt = "0.3"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.3"
