[package]
name = "server"
version = "0.1.0"
authors = ["Caleb Xavier Berger <caleb.x.berger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
dashmap = { version = "4.0.0-rc2", features = ["serde"] }
futures = "0.3"
rand = "0.7"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.3"
features = ["serde"]
