[package]
name = "server"
version = "0.1.0"
authors = ["Caleb Xavier Berger <caleb.x.berger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
dashmap = { version = "4.0.0-rc2", features = ["serde"] }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.1.15"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.3"
features = ["serde"]
